--- a/bin/Aardvark.Base.nuspec
+++ b/bin/Aardvark.Base.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>Aardvark.Base</id>
-        <version>1.0.2</version>
+        <version>1.0.3</version>
         <authors>VRVis Research Center</authors>
         <owners>VRVis Research Center</owners>
         <licenseUrl>http://opensource.org/licenses/Apache-2.0</licenseUrl>
@@ -14,6 +14,9 @@
 		<copyright>Copyright © 2014 VRVis Zentrum für Virtual Reality und Visualisierung Forschungs-GmbH, Donau-City-Strasse 1, A-1220 Wien, Austria.</copyright>
         <language>en-US</language>
         <tags>graphics visualization geometry math algorithms</tags>
+        <frameworkAssemblies>
+            <frameworkAssembly assemblyName="System.Drawing" />
+        </frameworkAssemblies>
     </metadata>
     <files>
         <file src="net40\Aardvark.Base.dll" target="lib\net40\Aardvark.Base.dll" />
