added Custom MSBuild-Import for new Aardvark compatibility;

--- a/src/Aardvark.Base/Aardvark.Base.csproj
+++ b/src/Aardvark.Base/Aardvark.Base.csproj
@@ -75,6 +75,7 @@
     <NoWarn>1591</NoWarn>
     <DocumentationFile>..\..\Bin\net40\Aardvark.Base.xml</DocumentationFile>
   </PropertyGroup>
+  <Import Project="..\..\..\build\Aardvark.targets" Condition="exists('..\..\..\build\Aardvark.targets')"/>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
