--- a/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
+++ b/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
@@ -50,9 +50,10 @@
     </Otherwise>
   </Choose>
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-  <Import Project="..\..\..\build\Aardvark.targets" Condition="exists('..\..\..\build\Aardvark.targets')" />
   <Import Project="$(SolutionPath).targets" Condition="exists('$(SolutionPath).targets')" />
+  <Import Project="..\..\..\..\build\Aardvark.targets" Condition="exists('..\..\..\..\build\Aardvark.targets')" />
   <Import Project="$(FSharpTargetsPath)" />
+  <Import Project="$(SolutionPath).targets" Condition="exists('$(SolutionPath).targets')" />
   <ItemGroup>
     <Compile Include="Prelude\Logging.fs" />
     <Compile Include="Prelude\FSLibExtensions.fs" />
@@ -113,27 +114,53 @@
     </ProjectReference>
   </ItemGroup>
   <Choose>
-    <When Condition="'$(AardvarkBaseProjectPath)' == ''" />
-    <Otherwise>
+    <When Condition="exists('..\..\..\..\build\Aardvark.targets')">
       <ItemGroup>
-        <ProjectReference Include="$(AardvarkBaseProjectPath)">
-          <Name>Aardvark.Base [Project]</Name>
-          <Project>{377DA721-C821-45F6-B803-9C8724C7B37F}</Project>
-          <Private>False</Private>
-        </ProjectReference>
-      </ItemGroup>
-    </Otherwise>
-  </Choose>
-  <Choose>
-    <When Condition="'$(AardvarkBaseTypeProvidersProjectPath)' == ''" />
-    <Otherwise>
-      <ItemGroup>
-        <ProjectReference Include="$(AardvarkBaseTypeProvidersProjectPath)">
-          <Name>Aardvark.Base.TypeProviders [Project]</Name>
+        <ProjectReference Include="..\Aardvark.Base.TypeProviders\Aardvark.Base.TypeProviders.fsproj">
+          <Name>Aardvark.Base.TypeProviders</Name>
           <Project>{8BFEA4EF-BF0A-4C1A-B7AC-CBDD930306FD}</Project>
           <Private>False</Private>
         </ProjectReference>
       </ItemGroup>
+    </When>
+    <Otherwise>
+      <Choose>
+        <When Condition="'$(AardvarkBaseTypeProvidersProjectPath)' == ''" />
+        <Otherwise>
+          <ItemGroup>
+            <ProjectReference Include="$(AardvarkBaseTypeProvidersProjectPath)">
+              <Name>Aardvark.Base.TypeProviders [Project]</Name>
+              <Project>{8BFEA4EF-BF0A-4C1A-B7AC-CBDD930306FD}</Project>
+              <Private>False</Private>
+            </ProjectReference>
+          </ItemGroup>
+        </Otherwise>
+      </Choose>
+    </Otherwise>
+  </Choose>
+  <Choose>
+    <When Condition="exists('..\..\..\..\build\Aardvark.targets')">
+      <ItemGroup>
+        <ProjectReference Include="..\Aardvark.Base\Aardvark.Base.csproj">
+          <Name>Aardvark.Base</Name>
+          <Project>{377DA721-C821-45F6-B803-9C8724C7B37F}</Project>
+          <Private>False</Private>
+        </ProjectReference>
+      </ItemGroup>
+    </When>
+    <Otherwise>
+      <Choose>
+        <When Condition="'$(AardvarkBaseProjectPath)' == ''" />
+        <Otherwise>
+          <ItemGroup>
+            <ProjectReference Include="$(AardvarkBaseProjectPath)">
+              <Name>Aardvark.Base [Project]</Name>
+              <Project>{377DA721-C821-45F6-B803-9C8724C7B37F}</Project>
+              <Private>False</Private>
+            </ProjectReference>
+          </ItemGroup>
+        </Otherwise>
+      </Choose>
     </Otherwise>
   </Choose>
 </Project>
