--- a/bin/Aardvark.Base.FSharp.nuspec
+++ b/bin/Aardvark.Base.FSharp.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>Aardvark.Base.FSharp</id>
-        <version>1.0.0</version>
+        <version>1.0.3</version>
         <authors>VRVis Research Center</authors>
         <owners>VRVis Research Center</owners>
         <licenseUrl>http://opensource.org/licenses/Apache-2.0</licenseUrl>
@@ -10,12 +10,12 @@
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>Aardvark.Base.FSharp is a collection of F# Tools extending Aardvark.Base with more F#-like APIs</description>
         <summary>FSharp Extensions for Aardvark.Base</summary>
-        <releaseNotes>Initial version.</releaseNotes>
+        <releaseNotes>Added PersistentHashSet implementation</releaseNotes>
 		<copyright>Copyright © 2014 VRVis Zentrum für Virtual Reality und Visualisierung Forschungs-GmbH, Donau-City-Strasse 1, A-1220 Wien, Austria.</copyright>
         <language>en-US</language>
         <tags>graphics fsharp visualization geometry math algorithms</tags>
         <dependencies>
-            <dependency  id="Aardvark.Base" version="1.0.4" />
+            <dependency id="Aardvark.Base" version="1.0.4" />
             <dependency id="FSharp.Compiler.Service" version="0.0.58" />
             <dependency id="NUnit" version="2.6.3" />
             <dependency id="RegexProvider" version="0.0.2" />
