--- a/bin/Aardvark.Base.FSharp.nuspec
+++ b/bin/Aardvark.Base.FSharp.nuspec
@@ -2,15 +2,16 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>Aardvark.Base.FSharp</id>
-        <version>1.0.3</version>
+        <version>1.0.4</version>
         <authors>VRVis Research Center</authors>
         <owners>VRVis Research Center</owners>
         <licenseUrl>http://opensource.org/licenses/Apache-2.0</licenseUrl>
         <projectUrl>https://github.com/vrvis/aardvark/wiki</projectUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
+        <title>Aardvark.Base.FSharp</title>
         <description>Aardvark.Base.FSharp is a collection of F# Tools extending Aardvark.Base with more F#-like APIs</description>
         <summary>FSharp Extensions for Aardvark.Base</summary>
-        <releaseNotes>Added PersistentHashSet implementation</releaseNotes>
+        <releaseNotes>PersistentHashSet is no longer called HashSet</releaseNotes>
 		<copyright>Copyright © 2014 VRVis Zentrum für Virtual Reality und Visualisierung Forschungs-GmbH, Donau-City-Strasse 1, A-1220 Wien, Austria.</copyright>
         <language>en-US</language>
         <tags>graphics fsharp visualization geometry math algorithms</tags>
